--- a/SQLVisualBuilder/HostingWpfUserControlInWf/ConeControl.xaml
+++ b/SQLVisualBuilder/HostingWpfUserControlInWf/ConeControl.xaml
@@ -10,13 +10,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-        <Grid Name="grid" Height="302" Width="295" VerticalAlignment="Center">
+        <Grid Name="grid" Height="300" Width="300" VerticalAlignment="Center">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="74*" />
             <ColumnDefinition Width="26*" />
         </Grid.ColumnDefinitions>
-        <GroupBox Height="96" Name="groupBox1" Width="100" VerticalContentAlignment="Center" Header="{Binding header}" Margin="12,49,106,157" />
-        <GroupBox Height="96" Name="groupBox2" Width="100" VerticalContentAlignment="Center" Header="TEST2" Margin="183,49,12,157" Grid.ColumnSpan="2" />
-        <Label Content="Label" Height="28" HorizontalAlignment="Left" Margin="128,58,0,0" Name="label1" VerticalAlignment="Top" Width="39" DataContext="{Binding}" />
+        <GroupBox Height="96" Name="groupBox1" Width="100" VerticalContentAlignment="Center" Header="TEST1" Margin="12,12,106,194" BorderBrush="Black" Background="White" />
+        <GroupBox Height="96" Name="groupBox2" Width="100" VerticalContentAlignment="Center" Header="TEST2" Margin="183,183,12,23" Grid.ColumnSpan="2" BorderBrush="Black" Background="White" />
+        <Label Content="Label" Height="28" HorizontalAlignment="Left" Margin="167,123,0,0" Name="label1" VerticalAlignment="Top" Width="39" DataContext="{Binding}" />
     </Grid>
 </UserControl>
